<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cristhianbonilla.moviereview.Fragments.DetallesMovieFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">





            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imagenMovie"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                             />


                    </FrameLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:stepSize="1"
                        android:theme="@style/RatingBar" />

                </LinearLayout>
                <Button

                    android:id="@+id/btn_calificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calificar"/>


                <TextView
                    android:id="@+id/descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:textStyle="italic|bold"
                    android:layout_centerInParent="true"
                    android:textSize="19dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:id="@+id/content_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"/>
                <RelativeLayout
                    android:id="@+id/caja_video"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bordes_redondos">

                    <TextView
                        android:id="@+id/informacion_lead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trailer"
                        android:textStyle="italic|bold"
                        android:layout_centerInParent="true"
                        android:textSize="19dp"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        />
                    <ImageView
                        android:id="@+id/btn_youtube"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignRight="@id/informacion_lead"
                       />

                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_comentarios"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
